Fix compiler warnings for Java 21